Migrated things to Java 21