@@ -7,7 +7,6 @@ import com.itemis.fluffyj.memory.FluffyNativeMethodHandle;
 
 import java.lang.foreign.Arena;
 import java.lang.foreign.MemorySegment;
-import java.lang.foreign.SegmentScope;
 import java.lang.foreign.SymbolLookup;
 import java.util.function.Function;
 
@@ -28,9 +27,9 @@ public final class ScDaemonNativeBridge extends NativeBase implements AutoClosea
      * @param libSup - Creates a "Connection" to the underlying native library in form of a
      *        {@link SymbolLookup}. The connection will be closed if {@link #close()} is called.
      */
-    public ScDaemonNativeBridge(Function<SegmentScope, SymbolLookup> libSup) {
-        myArena = Arena.openConfined();
-        var lib = libSup.apply(myArena.scope());
+    public ScDaemonNativeBridge(final Function<Arena, SymbolLookup> libSup) {
+        myArena = Arena.ofShared();
+        final var lib = libSup.apply(myArena);
 
         assuanNew = FluffyNativeMethodHandle
             .fromCLib(lib)
@@ -64,7 +63,7 @@ public final class ScDaemonNativeBridge extends NativeBase implements AutoClosea
      *        successful return.
      * @return gpg_error_t - 0 for success, error code else.
      */
-    public long assuanNew(MemorySegment p_ctx) {
+    public long assuanNew(final MemorySegment p_ctx) {
         return callNativeFunction(() -> assuanNew.call(p_ctx));
     }
 
@@ -73,7 +72,7 @@ public final class ScDaemonNativeBridge extends NativeBase implements AutoClosea
      *
      * @param ctx Pointer to ctx created with {@link #assuanNew(MemoryAddress)}.
      */
-    public void assuanRelease(MemorySegment ctx) {
+    public void assuanRelease(final MemorySegment ctx) {
         callNativeVoidFunction(() -> assuanRelease.call(ctx));
     }
 
@@ -86,7 +85,8 @@ public final class ScDaemonNativeBridge extends NativeBase implements AutoClosea
      * @param flags Undocumented. Use ASSUAN_SOCKET_CONNECT_FDPASSING (1)
      * @return gpg_error_t - 0 for success, error code else.
      */
-    public long assuanSocketConnect(MemorySegment ctx, MemorySegment name, int server_pid, int flags) {
+    public long assuanSocketConnect(final MemorySegment ctx, final MemorySegment name, final int server_pid,
+            final int flags) {
         return callNativeFunction(() -> assuanSocketConnect.call(ctx, name, server_pid, flags));
     }
 
@@ -123,9 +123,9 @@ public final class ScDaemonNativeBridge extends NativeBase implements AutoClosea
      *        {@link MemoryAddress#NULL}.
      * @return gpg_error_t
      */
-    public long assuanTransact(MemorySegment ctx, MemorySegment command, MemorySegment data_cb,
-            MemorySegment data_cb_arg, MemorySegment inquire_cb,
-            MemorySegment inquire_cb_arg, MemorySegment status_cb, MemorySegment status_cb_arg) {
+    public long assuanTransact(final MemorySegment ctx, final MemorySegment command, final MemorySegment data_cb,
+            final MemorySegment data_cb_arg, final MemorySegment inquire_cb,
+            final MemorySegment inquire_cb_arg, final MemorySegment status_cb, final MemorySegment status_cb_arg) {
         return callNativeFunction(() -> assuanTransact.call(ctx, command, data_cb, data_cb_arg, inquire_cb,
             inquire_cb_arg, status_cb, status_cb_arg));
     }
